# GridOps_Copilot

./: .dockerignore  .env.example  .gitignore  GridOps_Copilot_AMD_ACTII_Codex_Guide.md  GridOps_Copilot_Project_Brief_Lean.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py  safety.py
backend/app/agents/: __init__.py  dcrm_agent.py  fra_agent.py  ingestion_agent.py  maintenance_agent.py  orchestrator.py  scada_agent.py
backend/app/api/: dcrm.py  routes_assets.py  routes_diagnostics.py  routes_health.py  routes_reports.py  routes_runtime.py  routes_upload.py
backend/app/models/: __init__.py  fra_cnn.py  fra_model_loader.py
backend/app/schemas/: asset.py  diagnosis.py  report.py  runtime.py  upload.py
backend/app/services/: __init__.py  asset_registry.py  context_lookup.py  dcrm_analyzer.py  ingestion.py  recommendation.py  report_generation.py  risk_scoring.py  runtime_evidence.py  synthetic_data.py
backend/app/storage/: __init__.py  json_store.py  record_store.py
backend/app/workflows/: __init__.py  breaker_diagnosis.py
backend/tests/: test_api_contract.py  test_assets_api.py  test_breaker_workflow.py  test_context_agents.py  test_dcrm_agent.py  test_dcrm_analyzer.py  test_diagnosis_api.py  test_diagnosis_orchestrator.py  test_fra_agent.py  test_fra_model_loader.py  test_health.py  test_ingestion.py  test_ingestion_agent.py  test_report_generation.py  test_reports_api.py  test_risk_scoring.py  test_runtime_api.py  test_synthetic_data.py  test_upload_api.py
models/: fra_cnn_rocm.pt  (+1 more)
(+20 files in other folders)
