[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "gridops-copilot-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
    "pydantic-settings>=2.7,<3.0",
    "python-multipart>=0.0.20,<1.0",
    "pandas>=2.2,<3.0",
    "numpy>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "httpx2",
    "pytest>=8.0,<9.0",
    "pytest-cov>=6.0,<7.0",
    "ruff>=0.11,<1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"